Add Validation create Author

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,9 +2,9 @@
   "MyDb": {
     "ConnectionString": "mongodb+srv://iftekhar_shakil:iftekhar_shakil@cluster001.w8lyriq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster001",
     "DatabaseName": "LibraryDB",
-    "AuthorsCollectionName": "AuthorCollection",
-    "PublisherCollectionName": "PublisherCollection",
-    "BookFloorsCollectionName": "BookFloorsCollection"
+    "AuthorsCollectionName": "Authors",
+    "PublisherCollectionName": "Publishers",
+    "BookFloorsCollectionName": "BookFloors"
   },"Logging": {
     "LogLevel": {
       "Default": "Information",
